--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@nestjs/jwt": "^11.0.1",
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.0.1",
+    "@nestjs/serve-static": "^5.0.4",
     "@prisma/client": "^6.17.1",
     "@types/bcrypt": "^6.0.0",
     "@types/ms": "^2.1.0",
@@ -34,7 +35,7 @@
     "class-validator": "^0.14.2",
     "cookie-parser": "^1.4.7",
     "ms": "^2.1.3",
-    "nestjs-pino": "^2.5.1",
+    "nestjs-pino": "^4.4.1",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
@@ -52,6 +53,7 @@
     "@types/cookie-parser": "^1.4.9",
     "@types/express": "^5.0.0",
     "@types/jest": "^30.0.0",
+    "@types/multer": "^2.0.0",
     "@types/node": "^22.10.7",
     "@types/passport-jwt": "^4.0.1",
     "@types/passport-local": "^1.0.38",
