--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,6 @@
 /dist
 /node_modules
 /build
-/public
 
 # Logs
 logs
@@ -37,7 +36,6 @@ lerna-debug.log*
 !.vscode/extensions.json
 
 # dotenv environment variable files
-.env
 .env.development.local
 .env.test.local
 .env.production.local
@@ -56,4 +54,4 @@ pids
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
 
-/generated/prisma
+public
